--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
     </RelativeLayout>
 
     <RelativeLayout
+        android:id="@+id/relativeLayout2"
         android:layout_width="405dp"
         android:layout_height="200dp"
         android:layout_marginStart="3dp"
@@ -46,7 +47,38 @@
             android:layout_height="38dp"
             android:layout_alignParentBottom="true"
             android:layout_centerHorizontal="true"
-            android:alpha="0.35"
+            android:layout_marginBottom="-5dp"
+            android:alpha="0.75"
+            android:text="View Stats" />
+    </RelativeLayout>
+
+    <RelativeLayout
+        android:layout_width="405dp"
+        android:layout_height="200dp"
+        android:layout_marginStart="3dp"
+        android:layout_marginTop="19dp"
+        android:layout_marginEnd="3dp"
+        android:layout_marginBottom="112dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/relativeLayout2">
+
+        <ImageView
+            android:id="@+id/imageView8"
+            android:layout_width="380dp"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            app:srcCompat="@drawable/lol2" />
+
+        <Button
+            android:id="@+id/button3"
+            android:layout_width="wrap_content"
+            android:layout_height="38dp"
+            android:layout_alignParentBottom="true"
+            android:layout_centerHorizontal="true"
+            android:layout_marginBottom="4dp"
+            android:alpha="0.75"
             android:text="View Stats" />
     </RelativeLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
