--- a/app/src/main/res/layout/activity_stat_screen.xml
+++ b/app/src/main/res/layout/activity_stat_screen.xml
@@ -49,6 +49,7 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/linearLayout2"
         android:layout_width="408dp"
         android:layout_height="53dp"
         android:orientation="horizontal"
@@ -96,5 +97,15 @@
             android:alpha="0.25"
             app:srcCompat="@drawable/ic_settings_black_24dp" />
     </LinearLayout>
+
+    <TextView
+        android:id="@+id/textView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="@drawable/custom_edit_text_bg"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="@+id/statBackground"
+        app:layout_constraintStart_toStartOf="@+id/statBackground"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
