--- a/app/src/main/res/layout/activity_stat_screen.xml
+++ b/app/src/main/res/layout/activity_stat_screen.xml
@@ -100,41 +100,402 @@
             app:srcCompat="@drawable/ic_settings_black_24dp" />
     </LinearLayout>
 
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <LinearLayout
+        android:id="@+id/statTop"
+        android:layout_width="0dp"
+        android:layout_height="35dp"
+        android:layout_marginTop="40dp"
+        android:alpha="0.7"
         android:background="@drawable/custom_edit_text_bg"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
-        app:layout_constraintEnd_toEndOf="@+id/statBackground"
-        app:layout_constraintHorizontal_bias="0.496"
-        app:layout_constraintStart_toStartOf="@+id/statBackground"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
-        app:layout_constraintVertical_bias="0.09" />
-
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:background="@drawable/custom_edit_text_bg"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/textView3"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
 
-    <TextView
-        android:id="@+id/textView3"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginBottom="324dp"
+        <TextView
+            android:id="@+id/summonerName"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            android:text="Summoner:"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#4d4d4d"
+            android:textStyle="bold" />
+
+        <TextView
+            android:id="@+id/summonerLevel"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_gravity="center_horizontal"
+            android:layout_weight="1"
+            android:text="Level: "
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#4d4d4d"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/soloLayout"
+        android:layout_width="0dp"
+        android:layout_height="110dp"
+        android:alpha="0.7"
         android:background="@drawable/custom_edit_text_bg"
-        android:textAlignment="center"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        android:orientation="horizontal"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/statTop">
+
+        <ImageView
+            android:id="@+id/soloPic"
+            android:layout_width="50dp"
+            android:layout_height="101dp"
+            android:layout_weight="1"
+            app:srcCompat="@android:color/background_light" />
+
+        <TextView
+            android:id="@+id/rankSolo"
+            android:layout_width="205dp"
+            android:layout_height="match_parent"
+            android:background="@drawable/custom_edit_text_bg"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#4d4d4d"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/flexLayout"
+        android:layout_width="0dp"
+        android:layout_height="110dp"
+        android:layout_marginTop="5dp"
+        android:alpha="0.7"
+        android:background="@drawable/custom_edit_text_bg"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/soloLayout">
+
+        <ImageView
+            android:id="@+id/flexPic"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:layout_weight="1"
+            app:srcCompat="@android:color/background_light" />
+
+        <TextView
+            android:id="@+id/rankFlex"
+            android:layout_width="205dp"
+            android:layout_height="110dp"
+            android:layout_marginBottom="324dp"
+            android:background="@drawable/custom_edit_text_bg"
+            android:textAlignment="center"
+            android:textAppearance="?android:attr/textAppearanceMedium"
+            android:textColor="#4d4d4d"
+            android:textStyle="bold" />
+    </LinearLayout>
+
+    <ScrollView
+        android:id="@+id/matchesScroll"
+        android:layout_width="0dp"
+        android:layout_height="175dp"
+        android:layout_marginTop="245dp"
+        app:layout_constraintBottom_toBottomOf="@+id/ldrScroll"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/flexLayout">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:orientation="horizontal">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:alpha="0.7"
+                    android:background="@color/cardview_light_background"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:id="@+id/matchImg1"
+                        android:layout_width="300dp"
+                        android:layout_height="75dp"
+                        android:layout_weight="1"
+                        app:srcCompat="@android:color/background_light" />
+
+                    <LinearLayout
+                        android:layout_width="300dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/matchChamp1"
+                            android:layout_width="match_parent"
+                            android:layout_height="37.5dp"
+                            android:text="TextView"
+                            android:textAlignment="center"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textColor="#4d4d4d"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/matchLane1"
+                            android:layout_width="match_parent"
+                            android:layout_height="37.5dp"
+                            android:text="TextView"
+                            android:textAlignment="center"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textColor="#4d4d4d"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="300dp"
+                        android:layout_height="match_parent"
+                        android:layout_weight="1"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/matchKills1"
+                            android:layout_width="match_parent"
+                            android:layout_height="37.5dp"
+                            android:text="TextView"
+                            android:textAlignment="center"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textColor="#4d4d4d"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/matchDeaths1"
+                            android:layout_width="match_parent"
+                            android:layout_height="37.5dp"
+                            android:text="TextView"
+                            android:textAlignment="center"
+                            android:textAppearance="?android:attr/textAppearanceMedium"
+                            android:textColor="#4d4d4d"
+                            android:textStyle="bold" />
+                    </LinearLayout>
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="75dp"
+                android:alpha="0.7"
+                android:background="@color/cardview_light_background"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/matchImg2"
+                    android:layout_width="300dp"
+                    android:layout_height="75dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@android:color/background_light" />
+
+                <LinearLayout
+                    android:layout_width="300dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/matchChamp2"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/matchLane2"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="300dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/matchKills2"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/matchDeaths2"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="0.7"
+                android:background="@color/cardview_light_background"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/matchImg3"
+                    android:layout_width="300dp"
+                    android:layout_height="75dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@android:color/background_light" />
+
+                <LinearLayout
+                    android:layout_width="300dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/matchChamp3"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/matchLane3"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="300dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/matchKills3"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/matchDeaths3"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:alpha="0.7"
+                android:background="@color/cardview_light_background"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:id="@+id/matchImg4"
+                    android:layout_width="300dp"
+                    android:layout_height="75dp"
+                    android:layout_weight="1"
+                    app:srcCompat="@android:color/background_light" />
+
+                <LinearLayout
+                    android:layout_width="300dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/matchChamp4"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/matchLane4"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="300dp"
+                    android:layout_height="match_parent"
+                    android:layout_weight="1"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:id="@+id/matchKills4"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/matchDeaths4"
+                        android:layout_width="match_parent"
+                        android:layout_height="37.5dp"
+                        android:text="TextView"
+                        android:textAlignment="center"
+                        android:textAppearance="?android:attr/textAppearanceMedium"
+                        android:textColor="#4d4d4d"
+                        android:textStyle="bold" />
+                </LinearLayout>
+
+            </LinearLayout>
+        </LinearLayout>
+    </ScrollView>
 
     <ScrollView
         android:id="@+id/ldrScroll"
