--- a/app/src/main/res/layout/activity_stat_screen.xml
+++ b/app/src/main/res/layout/activity_stat_screen.xml
@@ -540,6 +540,30 @@
                 android:layout_height="470dp"
                 android:alpha="0.7"
                 android:background="@color/cardview_light_background" />
+
+        </LinearLayout>
+    </ScrollView>
+
+    <ScrollView
+        android:id="@+id/buildScroll"
+        android:layout_width="0dp"
+        android:layout_height="470dp"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/linearLayout">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <ListView
+                android:id="@+id/buildsList"
+                android:layout_width="412dp"
+                android:layout_height="470dp"
+                android:alpha="0.7"
+                android:background="@color/cardview_light_background" />
         </LinearLayout>
     </ScrollView>
 
